# motionstream

./: .gitignore  Gradio_UI.py  README.md  agent.json  app.py  cli.py  commands.md  prompts.yaml  pyproject.toml  pytest.ini  quickstart.md  requirements.txt  watcher.py
config/: default_config.yaml
src/tools/: final_answer.py  github_tool.py  package_scan.py  pypi_tool.py  scan_package.py
src/utils/: parser.py  scanner.py  spinner.py  summarizer.py
tests/: conftest.py  test_cli.py  test_integration.py  test_llm_utils.py  test_package_scan.py  test_parser.py  test_scan_command.py  test_scanner.py  test_summarizer.py  test_summary.py
tools/: dependency_chain.py  dependency_parser.py  final_answer.py  llm_utils.py  name_similarity.py  package_reputation.py  security_summary.py  summary.py  vulnerability_scan.py
