[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "motionstream"
version = "0.1.0"
description = "AI-powered Python package security scanner with vulnerability detection and risk assessment"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Callis Ezenwaka", email = "callisezenwaka@outlook.com"}]
requires-python = ">=3.10"
keywords = ["security", "vulnerability", "scanner", "python", "packages", "AI"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "smolagents>=0.1.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "packaging>=21.0",
    "huggingface-hub>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "requests==2.32.3",
    "colorama==0.4.6",
    "packaging==25.0",
    "pyyaml==6.0.2",
    "matplotlib==3.10.3",
    "gradio==5.31.0",
    "transformers==4.52.3",
    "torch==2.7.0",
    "toml==0.10.2",
    "ollama==0.4.8",
    "smolagents==1.16.1",
    "markdownify==1.1.0",
]

[project.scripts]
motionstream = "app:main"

[project.urls]
Homepage = "https://github.com/yourusername/motionstream"
Documentation = "https://github.com/yourusername/motionstream#readme"
Repository = "https://github.com/yourusername/motionstream"
"Bug Tracker" = "https://github.com/yourusername/motionstream/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*"]

[tool.setuptools.package-dir]
"" = "."

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true